2002-09-11  Mark Salter  <msalter@redhat.com>

	* src/main.c (do_go): Turn on line flushes before jumping to function.
	* src/net/net_io.c (net_io_control): Support flushes at end of lines.

2002-09-03  Yoshinori Sato <qzb04471@nifty.ne.jp>
2002-09-03  Mark Salter  <msalter@redhat.com>

	* include/fs/disk.h (__SWAB32): Fix incorrect masking.
	* src/fs/e2fs.c (e2fs_inode_block): Fix endianess of block numbers.

2002-08-29  Mark Salter  <msalter@redhat.com>

	* src/net/net_io.c (net_init): Initialize dns before showing addresses.

2002-08-26  Thomas Koeller <thomas@koeller.dyndns.org>

    	* src/flash.c: Do not warn about overwriting image data if
	-n option is used with 'fis create'. For 'fis load',
	perform load size check based on actual data length, not
	image size.

2002-08-22  Mark Salter  <msalter@redhat.com>

	* src/net/net_io.c (net_io_putc): Don't flush on every \n.
	* src/syscall.c (__do_syscall): Allow fileio support to fall back
	to non-fileio behavior if program is not being run by gdb.

2002-08-20  Thomas Koeller  <thomas@koeller.dyndns.org>

    	* cdl/redboot.cdl:
    	* include/redboot.h:
    	* src/main.c:
    	* src/flash.c:
    	* src/decompress.c: Use a common buffer for FIS directory
    	manipulation and zlib workspace to conserve RAM.

2002-08-20  Thomas Koeller  <thomas@koeller.dyndns.org>
 
     	* cdl/redboot.cdl:
 	* include/fis.h: Allow control of FIS descriptor padding.

2002-08-16  Jani Monoses  <jani@iv.ro>

	* src/io.c: Do not add empty lines to command history.
	* src/net/http_client.c: Read all data when in CLOSE_WAIT
	otherwise if the server closes quickly enough nothing is 
	received.
	
2002-08-09  Andrew Lunn  <andrew.lunn@ascom.ch>
	
	* src/crc.c: Removed. Replaced with the CRC package.
	* src/cksum.c: Removed the posix_crc function.
	* src/flash.c: Use the crc package crc functions.
	* src/xyzModem.c: Ditto
	* include/redboot.h: Use the crc package include file.
	* cdl/redboot.cdl: removed crc.c 
